bugfixes and additions +InnerLink, replacing react-router-hash-link *added borders to headers in Page.css *added a "go to top" button on pages with JumpLists *changed prebuild, DisplayTable, and Page.css to use InnerLink *fixed link-generating bugs in DisplayTable *fixed major bug in SearchPage that broke it *updated README *misc edits

--- a/src/pages/Page.css
+++ b/src/pages/Page.css
@@ -1,3 +1,44 @@
+/* Global stuff */
+
+span.innerlink {
+	color: var(--ion-color-primary);
+	text-decoration: underline;
+	cursor: pointer;
+}
+h1, h2, h3, h4, h5, h6 {
+	border-block-start-width: 5px;
+	border-block-end-width: 2px;
+	border-inline-width: 0;
+	padding-block-start: 4px;
+	padding-inline-start: 0.1rem;
+	border-block-start-color: var(--ion-color-light);
+	border-block-end-color: var(--ion-color-light-shade);
+	border-style: solid;
+}
+h3 {
+	border-block-start-width: 4px;
+}
+h4 {
+	border-block-start-width: 3px;
+	padding-block-start: 3px;
+}
+h5, h6 {
+	border-block-start-width: 2px;
+	border-block-end-width: 1px;
+	padding-block-start: 2px;
+}
+h6 {
+	border-block-start-width: 1px;
+}
+h1:first-child,
+h2:first-child,
+h3:first-child,
+h4:first-child,
+h5:first-child,
+h6:first-child {
+	border-block-start-width: 0;
+}
+
 /* Main */
 
 li {
@@ -73,6 +114,8 @@ div.jumpList {
 	padding-block: 0.25rem;
 	margin-block-start: 0;
 	max-width: 60vw;
+	z-index: 2;
+	position: relative;
 }
 div.jumpList h2 {
 	font-size: 1rem;
@@ -85,9 +128,24 @@ div.jumpList ul {
 div.jumpList ul li {
 	font-size: 0.875rem;
 	line-height: 1.25rem;
+	color: var(--ion-color-primary);
+	cursor: pointer;
 }
-div.jumpList ul li a {
+div.jumpToTop {
+	position: fixed;
+	z-index: 1;
+	bottom: 6.5rem;
+	right: calc(50% - 0.75rem);
+	font-weight: bold;
+	padding: 0.25rem;
+	background: var(--ion-color-light-tint);
+	border: 2px solid var(--ion-color-secondary-shade);
+	border-radius: 1rem;
+	width: 1.5rem;
+	text-align: center;
+	color: var(--ion-color-secondary);
 	text-decoration: none;
+	cursor: pointer;
 }
 
 /* Footer */
@@ -155,6 +213,9 @@ div.loadingPage ion-text {
 }
 div.loadingPage ion-text {
 	padding-block-end: 2rem;
+}
+div.loadingPage h1 {
+	border: 0;
 }
 
 /* Sources Modal */
